platform/network-policies/backend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-policy

spec:
  podSelector:
    matchLabels:
      app: backend-api

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend-ui

  policyTypes:
    - Ingress
