platform/network-policies/frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: frontend-policy

spec:
  podSelector:
    matchLabels:
      app: frontend-ui

  ingress:
    - {}

  policyTypes:
    - Ingress
